# engine

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  PROTOCOL.md  README.md  engine.sln  go.mod  go.sum
.devcontainer/: Dockerfile  devcontainer.json  start-nats.sh
crates/engine-ecs/: Cargo.toml
crates/engine-ecs/src/: lib.rs  world.rs
crates/engine-schema/: Cargo.toml
crates/engine-schema/src/: ast.rs  lib.rs  parser.rs  schema.rs
crates/engine-server/: Cargo.toml
crates/engine-server/src/: main.rs
crates/engine_app/: Cargo.toml
crates/engine_app/src/: main.rs  registry.rs  scheduler.rs  tick.rs  world.rs
crates/engine_component/: Cargo.toml
crates/engine_component/src/: archetype.rs  component.rs  entity.rs  lib.rs  query.rs
crates/engine_defaults/: Cargo.toml
crates/engine_defaults/src/: lib.rs
crates/engine_ecs/: Cargo.toml
crates/engine_ecs/src/: world.rs
crates/engine_math/: Cargo.toml
crates/engine_math/src/: lib.rs  transform.rs
crates/engine_net/: Cargo.toml
crates/engine_net/src/: codec.rs  connection.rs  error.rs  lib.rs  messages.rs  subjects.rs
crates/engine_schema/: Cargo.toml
crates/engine_schema/src/: lexer.rs  schema.rs
crates/engine_server/: Cargo.toml
crates/engine_server/src/: api.rs
crates/engine_system/: Cargo.toml
crates/engine_system/src/: config.rs  context.rs  lib.rs  runner.rs
docs/: grammar.ebnf
engine/: engine.sln
engine/.devcontainer/: Dockerfile
engine/libs/shared/: entity.cs
engine/server/: foo.cs  program.cs  server.csproj
engine_editor/: package-lock.json  package.json
engine_editor/src-tauri/: Cargo.toml  tauri.conf.json
engine_editor/src-tauri/src/: main.rs
examples/: gameplay.ecs  physics.ecs
examples/accelerate_system/: Cargo.toml
examples/accelerate_system/src/: main.rs
examples/components/: Cargo.toml
examples/components/src/: lib.rs
examples/print_velocity_system/: Cargo.toml
examples/print_velocity_system/src/: main.rs
examples/spawn_system/: Cargo.toml
examples/spawn_system/src/: main.rs
examples/systems/: Cargo.toml
pkg/: config.go  data.go  storage.go
pkg/nova_ext/: storage.go
schema/docs/: grammar.md
schema/std/: types.ecs
server/: .gitignore  Foo.cs  Program.cs
