[workspace]
members = ["crates/*", "examples/*", "engine_editor/src-tauri"]
resolver = "2"

[workspace.dependencies]
# Serialisation
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
serde_json = "1"

# Async runtime & networking
tokio = { version = "1", features = ["full"] }
async-nats = "0.38"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
dashmap = "6"

# Math
glam = { version = "0.29", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Unique identifiers
uuid = { version = "1", features = ["v4"] }

# Engine crates (internal)
engine_component = { path = "crates/engine_component" }
engine_math = { path = "crates/engine_math" }
engine_net = { path = "crates/engine_net" }
engine_system = { path = "crates/engine_system" }
