[package]
name = "engine_app"
version = "0.1.0"
edition = "2024"
description = "Coordinator binary for the distributed ECS engine."

[[bin]]
name = "engine_app"
path = "src/main.rs"

[dependencies]
engine_component = { workspace = true }
engine_net = { workspace = true }
tokio = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
futures = "0.3"
