[package]
name = "engine_math"
version = "0.1.0"
edition = "2024"
description = "Math types for the distributed ECS engine. Re-exports glam and defines engine-specific spatial types."

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
engine_component = { workspace = true }

[dev-dependencies]
rmp-serde = { workspace = true }
