[package]
name = "engine_net"
version = "0.1.0"
edition = "2024"
description = "NATS transport layer for the distributed ECS engine."

[dependencies]
async-nats = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
engine_component = { workspace = true }
uuid = { workspace = true }
