[package]
name = "engine_system"
version = "0.1.0"
edition = "2024"
description = "System runtime library for the distributed ECS engine."

[dependencies]
engine_component = { workspace = true }
engine_net = { workspace = true }
tokio = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
futures = "0.3"
