[package]
name = "print_velocity_system"
version = "0.1.0"
edition = "2024"
description = "Example system that logs velocity each tick."

[[bin]]
name = "print_velocity_system"
path = "src/main.rs"

[dependencies]
engine_component = { workspace = true }
engine_system = { workspace = true }
components = { path = "../components" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
